Skills page draft

--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,7 @@
             <section id="section-projects">
                 <h2 class="heading1">PROJECTS</h2>
                 <section class="container">
-                    <p class="credit-text">Please note that these are not solely my projects. I have worked on these under my employer as a part of the <a class="firstwire-link" href="https://firstwireapp.com/" target="_blank">FirstWire</a> team.</p>
+                    <!-- <p class="credit-text">Please note that these are not solely my projects. I have worked on these under my employer as a part of the <a class="firstwire-link" href="https://firstwireapp.com/" target="_blank">FirstWire</a> team.</p> -->
                     <div class="row project-list">
                         <!-- <div class="col-3 project-item">
                             <a href="index.html">Back to Home</a> 
