--- a/skills.html
+++ b/skills.html
@@ -11,7 +11,7 @@
 </head>
     <body>
         <div id="loading">
-            <img src="/assets/images/cube.png" alt="" srcset="">
+            <img src="/assets/images/cube.png" alt="">
         </div>
         <div id="canvas"></div>
         <div id="wrapper">
@@ -23,7 +23,90 @@
                 </nav>
             </header>
             <section id="section-skills">
-
+                <h2 class="heading1">SKILLS</h2>
+                <section class="container">
+                    <div class="row">
+                        <div class="col-4">
+                            <h3 class="skill-heading">Frontend Technologies</h3>
+                        </div>
+                        <div class="col-8">
+                            <div class="skill-list">
+                                <div class="my-skill">
+                                    <img src="assets/images/html1.png" alt="html">
+                                </div>
+                                <div class="my-skill">
+                                    <img src="assets/images/css1.png" alt="css">
+                                </div>
+                                <div class="my-skill">
+                                    <img src="assets/images/bootstrap1.png" alt="bootstrap">
+                                </div>
+                                <div class="my-skill">
+                                    <img src="assets/images/javascript.png" alt="javascript">
+                                </div>
+                                <div class="my-skill">
+                                    <img src="assets/images/jquery1.png" alt="jquery">
+                                </div>
+                                <div class="my-skill">
+                                    <img src="assets/images/angular1.png" alt="angular">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-4">
+                            <h3 class="skill-heading">Backend Technologies</h3>
+                        </div>
+                        <div class="col-8">
+                            <div class="skill-list">
+                                <div class="my-skill">
+                                    <img src="assets/images/node1.png" alt="node">
+                                </div>
+                                <div class="my-skill">
+                                    <img src="assets/images/express1.png" alt="express">
+                                </div>
+                                <div class="my-skill">
+                                    <img src="assets/images/mongodb1.png" alt="mongodb">
+                                </div>
+                                <div class="my-skill">
+                                    <img src="assets/images/php1.png" alt="php">
+                                </div>
+                                <div class="my-skill">
+                                    <img src="assets/images/shopify1.png" alt="shopify">
+                                </div>
+                                <div class="my-skill">
+                                    <img src="assets/images/wordpress1.png" alt="wordpress">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-4">
+                            <h3 class="skill-heading">Misc</h3>
+                        </div>
+                        <div class="col-8">
+                            <div class="skill-list">
+                                <!-- <div class="my-skill">
+                                    <img src="assets/images/html1.png" alt="github">
+                                </div>
+                                <div class="my-skill">
+                                    <img src="assets/images/css1.png" alt="css">
+                                </div>
+                                <div class="my-skill">
+                                    <img src="assets/images/bootstrap1.png" alt="bootstrap">
+                                </div>
+                                <div class="my-skill">
+                                    <img src="assets/images/javascript.png" alt="javascript">
+                                </div>
+                                <div class="my-skill">
+                                    <img src="assets/images/jquery1.png" alt="jquery">
+                                </div>
+                                <div class="my-skill">
+                                    <img src="assets/images/angular1.png" alt="angular">
+                                </div> -->
+                            </div>
+                        </div>
+                    </div>
+                </section>
             </section>
             <footer>
                 <p class="contact"><a href="https://www.linkedin.com/in/iamaditigupta/" target="_blank">Let's get Linked! <i class="fas fa-external-link-alt"></i></a></p>
@@ -37,8 +120,8 @@
         <script src="assets/scripts/threejs/ConvexHull.js"></script>
         <script src="assets/scripts/threejs/ConvexGeometry.js"></script>
         <script src="assets/scripts/threejs/WebGL.js"></script>
-        <script src="assets/scripts/threejs/stats.min.js"></script> -->
-        <!-- <script src="assets/scripts/threejs/animated-bg.js"></script> -->
+        <script src="assets/scripts/threejs/stats.min.js"></script>
+        <script src="assets/scripts/threejs/animated-bg.js"></script> -->
         <script src="assets/scripts/threejs/FlyControls.js"></script>
         <script src="assets/scripts/threejs/Lensflare.js"></script>
         <script src="assets/scripts/threejs/lensflares.js"></script>
