--- a/index.html
+++ b/index.html
@@ -32,7 +32,11 @@
                     <div class="row">
                         <div class="col-6">
                             <div class="about-text">
-                                <p>I have experience of delivering successful projects with full stack development. I have worked with team and handled projects individually as well.</p>
+                                <p>I am a Lucknow based developer with experience in building fully responsive websites for multiple businesses. I enjoy making things and bringing life to designs by converting them into live websites and animations.</p>
+                                <p>Development is my passion and motivates me to keep learning new things and get better everyday. I am a fast learner and can easily juggle between projects and roles with relative ease.</p>
+                                <p>When I'm not developing I can be found spending time with my mum or friends, swimming, or trying something new to add in my skill set.</p><br>
+                                <p>Want to know more about me? <span class="contact"><a href="https://www.linkedin.com/in/iamaditigupta/" target="_blank"> Let's connect <i class="fas fa-external-link-alt"></i></a></span></p> 
+                                <!-- <p><span class="contact"><a href="https://www.linkedin.com/in/iamaditigupta/" target="_blank"> View my resume</a></span></p> -->
                             </div>
                         </div>
                         <div class="col-6">
