--- a/skills.html
+++ b/skills.html
@@ -26,83 +26,105 @@
                 <h2 class="heading1">SKILLS</h2>
                 <section class="container">
                     <div class="row">
-                        <div class="col-4">
-                            <h3 class="skill-heading">Frontend Technologies</h3>
-                        </div>
-                        <div class="col-8">
-                            <div class="skill-list">
-                                <div class="my-skill">
-                                    <img src="assets/images/html1.png" alt="html">
+                        <div class="col-6">
+                            <div class="skill-type">
+                                <p>Currently working as Software Engineer in FirstWireApp Lucknow, I enjoy making responsive websites with smooth transitions and animations. I develop with the aim to create better interfaces and experiences for the user.</p>
+                                <p>Having got the opportunity to work on different technology stacks, I have experience working with-  </p>
+                                <div class="row">
+                                    <div class="col-12 skill-tab">
+                                        <div class="skill-list">
+                                            <ul class="my-skill">
+                                                <li>REST APIs</li>
+                                                <li>Payment Gateways</li>
+                                                <li>Web Services</li>
+                                                <li>E-Commerce</li>
+                                                <li>psd to HTML</li>
+                                                <li>Wordpress Theme Development</li>
+                                                <li>Wordpress Theme Customization</li>
+                                                <li>Shopify Theme Customization</li>
+                                                <li>Wordpress Plugins</li>
+                                                <li>Client Communication</li>
+                                            </ul>
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="my-skill">
-                                    <img src="assets/images/css1.png" alt="css">
-                                </div>
-                                <div class="my-skill">
-                                    <img src="assets/images/bootstrap1.png" alt="bootstrap">
-                                </div>
-                                <div class="my-skill">
-                                    <img src="assets/images/javascript.png" alt="javascript">
-                                </div>
-                                <div class="my-skill">
-                                    <img src="assets/images/jquery1.png" alt="jquery">
-                                </div>
-                                <div class="my-skill">
-                                    <img src="assets/images/angular1.png" alt="angular">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-4">
-                            <h3 class="skill-heading">Backend Technologies</h3>
-                        </div>
-                        <div class="col-8">
-                            <div class="skill-list">
-                                <div class="my-skill">
-                                    <img src="assets/images/node1.png" alt="node">
-                                </div>
-                                <div class="my-skill">
-                                    <img src="assets/images/express1.png" alt="express">
-                                </div>
-                                <div class="my-skill">
-                                    <img src="assets/images/mongodb1.png" alt="mongodb">
-                                </div>
-                                <div class="my-skill">
-                                    <img src="assets/images/php1.png" alt="php">
-                                </div>
-                                <div class="my-skill">
-                                    <img src="assets/images/shopify1.png" alt="shopify">
-                                </div>
-                                <div class="my-skill">
-                                    <img src="assets/images/wordpress1.png" alt="wordpress">
+                                <div class="disp-lg">
+                                    <p>I am looking for opportunities in organizations where I can contribute and explore more about the User Interface and Experience.</p>
+                                    <p>Have a question or want to hire? <span class="contact"> <a href="https://www.linkedin.com/in/iamaditigupta/" target="_blank"> Let's connect!</a></span></p>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-4">
-                            <h3 class="skill-heading">Misc</h3>
-                        </div>
-                        <div class="col-8">
-                            <div class="skill-list">
-                                <!-- <div class="my-skill">
-                                    <img src="assets/images/html1.png" alt="github">
+                        <div class="col-6">
+                            <div class="skill-type">
+                                <h3>Technical Skills</h3>
+                                <div class="row">
+                                    <div class="col-6 skill-tab">
+                                        <h3 class="skill-heading">Frontend Technologies</h3>
+                                        <div class="skill-list">
+                                            <ul class="my-skill">
+                                                <li>HTML</li>
+                                                <li>CSS</li>
+                                                <li>javaScript</li>
+                                                <li>Bootstrap</li>
+                                                <li>jQuery</li>
+                                                <li>Angular</li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    <div class="col-6 skill-tab">
+                                        <h3 class="skill-heading">Backend Technologies</h3>
+                                        <div class="skill-list">
+                                            <ul class="my-skill">
+                                                <li>Node</li>
+                                                <li>Express</li>
+                                                <li>Mongodb</li>
+                                                <li>PHP</li>
+                                                <li>mySQL</li>
+                                            </ul>
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="my-skill">
-                                    <img src="assets/images/css1.png" alt="css">
+                                <div class="row">
+                                    <div class="col-6 skill-tab">
+                                        <h3 class="skill-heading">CMS</h3>
+                                        <div class="skill-list">
+                                            <ul class="my-skill">
+                                                <li>Shopify</li>
+                                                <li>WordPress</li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    <div class="col-6 skill-tab">
+                                        <h3 class="skill-heading">Misc</h3>
+                                        <div class="skill-list">
+                                            <ul class="my-skill">
+                                                <li>Git</li>
+                                                <li>Adobe Photoshop</li>
+                                                <li>Visual Studio</li>
+                                            </ul>
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="my-skill">
-                                    <img src="assets/images/bootstrap1.png" alt="bootstrap">
+                            </div>
+                            <div class="skill-type">
+                                <h3>Soft Skills</h3>
+                                <div class="row">
+                                    <div class="col-12 skill-tab">
+                                        <ul class="my-skill">
+                                            <li>Effective Communication Skills</li>
+                                            <li>Natural Storyteller</li>
+                                            <li>Team Player</li>
+                                            <li>Curious and humble</li>
+                                            <li>Self Motivated</li>
+                                            <li>Self organized and can work independently</li>
+                                            <li>Open minded for criticism</li>
+                                        </ul>
+                                    </div>
                                 </div>
-                                <div class="my-skill">
-                                    <img src="assets/images/javascript.png" alt="javascript">
-                                </div>
-                                <div class="my-skill">
-                                    <img src="assets/images/jquery1.png" alt="jquery">
-                                </div>
-                                <div class="my-skill">
-                                    <img src="assets/images/angular1.png" alt="angular">
-                                </div> -->
+                            </div>
+                            <div class="disp-sm">
+                                <p>I am looking for opportunities in organizations where I can contribute and explore more about the User Interface and Experience.</p>
+                                <p>Have a question or want to hire? <span class="contact"> <a href="https://www.linkedin.com/in/iamaditigupta/" target="_blank"> Let's connect!</a></span></p>
                             </div>
                         </div>
                     </div>
@@ -113,15 +135,8 @@
             </footer>
         </div>
         <script src="assets/scripts/script.js"></script>
-        
         <!-- for shape animation -->
         <script src="assets/scripts/threejs/three.min.js"></script>
-        <!-- <script src="assets/scripts/threejs/OrbitControls.js"></script>
-        <script src="assets/scripts/threejs/ConvexHull.js"></script>
-        <script src="assets/scripts/threejs/ConvexGeometry.js"></script>
-        <script src="assets/scripts/threejs/WebGL.js"></script>
-        <script src="assets/scripts/threejs/stats.min.js"></script>
-        <script src="assets/scripts/threejs/animated-bg.js"></script> -->
         <script src="assets/scripts/threejs/FlyControls.js"></script>
         <script src="assets/scripts/threejs/Lensflare.js"></script>
         <script src="assets/scripts/threejs/lensflares.js"></script>
