--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
     <body>
         <div id="loading">
-            <img src="/assets/images/cube.png" alt="" srcset="">
+            <img src="/assets/images/cube.png" alt="pre-loader">
         </div>
         <div id="canvas"></div>
         <div id="wrapper">
