--- a/skills.html
+++ b/skills.html
@@ -11,7 +11,7 @@
 </head>
     <body>
         <div id="loading">
-            <img src="/assets/images/cube.png" alt="">
+            <img src="/assets/images/preloader.png" alt="pre-loader">
         </div>
         <div id="canvas"></div>
         <div id="wrapper">
