cross brower fixes

--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
                                 <p>Development is my passion and motivates me to keep learning new things and get better everyday. I am a fast learner and can easily juggle between projects and roles with relative ease.</p>
                                 <p>When I'm not developing I can be found spending time with my mum or friends, swimming, or trying something new to add in my skill set.</p><br>
                                 <p>Want to know more about me? <span class="contact"><a href="https://www.linkedin.com/in/iamaditigupta/" target="_blank"> Let's connect <i class="fas fa-external-link-alt"></i></a></span></p> 
-                                <!-- <p><span class="contact"><a href="https://www.linkedin.com/in/iamaditigupta/" target="_blank"> View my resume</a></span></p> -->
                             </div>
                         </div>
                         <div class="col-6">
@@ -51,7 +50,7 @@
                                     <div class="about-col"></div>
                                 </div>
                                 <div class="about-row">
-                                    <div class="about-col"></div>
+                                    <div class="about-col moz-block"></div>
                                     <div class="about-col">
                                         <a href="projects.html">
                                             <p><i class="fas fa-ellipsis-v"></i></p>
@@ -72,12 +71,6 @@
         
         <!-- for shape animation -->
         <script src="assets/scripts/threejs/three.min.js"></script>
-        <!-- <script src="assets/scripts/threejs/OrbitControls.js"></script>
-		<script src="assets/scripts/threejs/ConvexHull.js"></script>
-		<script src="assets/scripts/threejs/ConvexGeometry.js"></script>
-		<script src="assets/scripts/threejs/WebGL.js"></script>
-		<script src="assets/scripts/threejs/stats.min.js"></script> -->
-        <!-- <script src="assets/scripts/threejs/animated-bg.js"></script> -->
         <script src="assets/scripts/threejs/FlyControls.js"></script>
         <script src="assets/scripts/threejs/Lensflare.js"></script>
         <script src="assets/scripts/threejs/lensflares.js"></script>
